Tue Sep 10 16:45 2013 CDT
    * lib/channel.js: Don't attempt to emit to SSL sockets if it's disabled

Tue Sep 10 16:34 2013 CDT
    * www/channel.html, www/assets/js/jwplayer.js: Cache jwplayer script
      locally since their server doesn't support SSL

Tue Sep 10 16:10 2013 CDT
    * lib/server.js, lib/api.js: Implicitly trust X-Forwarded-For when the
      source ip is 127.0.0.1

Tue Sep 10 14:09 2013 CDT
    * lib/config.js, lib/server.js: Add a config key for the passphrase
      to the ssl key.

Mon Sep  9 22:10 2013 CDT
    * lib/acp.js: Change acp-channel-unload callback to duplicate the list
      of users in the channel to prevent concurrent modification while
      kicking
    * lib/channel.js: As an extra precaution, set user.channel = null after
      kicking a user

Mon Sep  9 17:11 2013 CDT
    * lib/server.js: If SSL is enabled in config, create an additional
      server listening with SSL for websockets and HTTPS traffic
    * lib/config.js: Add config keys for SSL
    * lib/channel.js: Broadcast messages to both regular and SSL sockets
    * www/assets/js/iourl.js: Add SSL_URL and automatically set WEB_URL and
      IO_URL to SSL_URL when the protocol is HTTPS
    * www/assets/js/callbacks.js: Automatically set the secure option on
      io.connect()
    * www/assets/js/ui.js, www/index.html, www/channel.html: Fix links to
      be dependent on the protocol

Sun Sep  8 17:41 2013 CDT
    * lib/server.js: Change behavior of unloadChannel - deletes all object
      keys in the channel object and then sets channel.dead = true
    * lib/channel.js: Add extra checks in callbacks to ensure certain things
      don't happen if the channel is dead
    * lib/playlist.js: Add extra checks to kill the playlist if the channel
      it is associated with is dead
    * lib/database.js: Add extra checks to prevent loading channel data into
      a dead channel object
    * tests/fastQuit.js: A simple script to open a connection, join a