@@ -1,3 +1,7 @@
+Tue Sep 10 17:17 2013 CDT
+    * www/assets/js/player.js: Fix loading over SSL for everything except
+      TwitchTV and JustinTV
+
 Tue Sep 10 16:45 2013 CDT
     * lib/channel.js: Don't attempt to emit to SSL sockets if it's disabled
 
